--- a/galeria.html
+++ b/galeria.html
@@ -69,7 +69,7 @@
 
     <div class="container" style="padding: 50px">
         <video poster="Media/poster.jpg" controls>
-            <source src="Watchmen%20Motion%20Comic%20-%20Chapter%201.mp4" type="video/mp4">
+            <source src="Media/video.mp4" type="video/mp4">
         </video>
     </div>
 
