Updated various files

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -56,13 +56,14 @@
         <div class="form">
             <form>
                 <label for="email">Email: </label>
-                <input type="email" id="email" placeholder="e-mail" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$">
+                <input type="email" id="email" required placeholder="e-mail" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$">
 
                 <label for="topic">Temat wiadomości: </label>
-                <select id="topic" name="topic">
-                    <option>Gratulacje, 3.0</option>
-                    <option>Piwo</option>
-                    <option>Student</option>
+                <select required id="topic" name="topic">
+                    <option value="" hidden>Wybierz temat</option>
+                    <option>Strona jest brzydka</option>
+                    <option>Strona nie działa</option>
+                    <option>Brawo, 5.0</option>
                 </select>
 
                 <label for="message">Wiadomość:</label>
