--- a/galeria.html
+++ b/galeria.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -69,7 +69,7 @@
 
     <div class="container" style="padding: 50px">
         <video poster="Media/poster.jpg" controls>
-            <source src="./Media/video.mp4" type="video/mp4">
+            <source src="Media/video.mp4" type="video/mp4">
         </video>
     </div>
 
